# spatial_canine_epidemic

./: .gitignore  Infections.ipynb  README.md  Setup.ipynb  pyproject.toml
dog_epidemic/: Utils.py
