[project]
name = "dog-epidemic"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "pandas-bokeh (>=0.5.5,<0.6.0)",
    "pgeocode (>=0.5.0,<0.6.0)",
    "shapely (>=2.0.7,<3.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "bokeh (>=3.6.2,<4.0.0)",
    "pointpats (>=2.5.1,<3.0.0)",
    "pyarrow (>=19.0.0,<20.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "numpyro (>=0.17.0,<0.18.0)",
    "geoplot (>=0.5.1,<0.6.0)",
    "jax (>=0.5.0,<0.6.0)",
    "imageio (>=2.37.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
